--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-# PermissionsEx
+# PermissionsEx 2020
 # Copyright (C) zml and PermissionsEx contributors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
